feat: route to show daily office completion
